# bootstrap/helpers/api.php
@@ -135,6 +135,7 @@ function sharedDataApplications()
         'docker_compose_domains' => 'array|nullable',
         'docker_compose_custom_start_command' => 'string|nullable',
         'docker_compose_custom_build_command' => 'string|nullable',
+        'use_coolify_json' => 'boolean',
     ];
 }
 
@@ -178,4 +179,5 @@ function removeUnnecessaryFieldsFromRequest(Request $request)
     $request->offsetUnset('use_build_server');
     $request->offsetUnset('is_static');
     $request->offsetUnset('force_domain_override');
+    $request->offsetUnset('use_coolify_json');
 }
